# 4C-webviewer

./: .pre-commit-config.yaml  LICENSE  README.md  gui_utils.py  main.py  pyproject.toml  python_utils.py  requirements.in  requirements.txt  run_webserver.py
.github/workflows/: check_code.yaml  run_testsuite.yaml
fourc_webviewer/: cli_utils.py  gui_utils.py  run_webserver.py  vturender.py
fourc_webviewer/input_file_utils/: read_dat_file.py
input_file_utils/: dat_file_visualization.py  read_dat_file.py
src/fourc_webviewer/: __init__.py  cli_utils.py  fourc_webserver.py  gui_utils.py  main.py  python_utils.py  pyvista_render.py  run_webserver.py  vturender.py
src/fourc_webviewer/input_file_utils/: __init__.py  dat_file_visualization.py  fourc_yaml_file_visualization.py  io_utils.py  read_dat_file.py  write_dat_file.py
src/fourc_webviewer_default_files/: __init__.py  ssti_mono_3D_3hex8_elch_s2i_butlervolmerthermo_growthlaw.4C.yaml
test/: test_pyvista.py
tests/: test_fourcwebserver.py  test_pyvista.py
